8263459: Add better support for restricted methods