@@ -30,7 +30,7 @@
  *          jdk.incubator.foreign/jdk.internal.foreign.abi.aarch64
  *          jdk.incubator.foreign/jdk.internal.foreign.abi.x64.windows
  *          jdk.incubator.foreign/jdk.internal.foreign.abi.x64.sysv
- * @run testng/othervm -Dforeign.restricted=permit VaListTest
+ * @run testng/othervm --enable-native-access=ALL-UNNAMED VaListTest
  */
 
 import jdk.incubator.foreign.*;
